@@ -7,6 +7,39 @@
     (.setAccessible field true)
     (.get field nil)))
 
+(def ^:private required-symbols
+  {"FfmSignalfdBackend"
+   ["signalfd" "read" "sigemptyset" "sigaddset" "pthread_sigmask"
+    "pthread_self" "pthread_kill" "signal" "eventfd" "poll" "write" "close"]
+   "FfmKqueueBackend"
+   ["kqueue" "kevent" "signal" "kill" "getpid" "close"]})
+
+(defn- backend-name []
+  (com.hypirion.beckon.SignalRegistererHelper/backendName))
+
+(defn- native-access-enabled? []
+  (boolean (some #(re-find #"--enable-native-access=(ALL-UNNAMED|.*beckon.*)" %)
+                (.getInputArguments (java.lang.management.ManagementFactory/getRuntimeMXBean)))))
+
+(defn capabilities
+  "Return side-effect-free information needed before selecting the FFM backend."
+  []
+  (let [backend (backend-name)
+        klass (Class/forName (str "com.hypirion.beckon." backend))
+        method (.getMethod klass "supportedSignals" (make-array Class 0))
+        version (first (re-find #"^(\d+)" (System/getProperty "java.version")))]
+    {:os (System/getProperty "os.name")
+     :architecture (System/getProperty "os.arch")
+     :backend backend
+     :supported-signals (set (.invoke method nil (object-array 0)))
+     :required-symbols (get required-symbols backend [])
+     :java-major-version (Integer/parseInt version)
+     :native-access-enabled? (native-access-enabled?)
+     :external-signal-prerequisites
+     (if (= backend "FfmSignalfdBackend")
+       {:requires-prelaunch-shim? true :requires-xrs? true :requires-sigblk? true}
+       {:requires-prelaunch-shim? false :requires-xrs? false :requires-sigblk? false})}))
+
 (defn close!
   "Stops and closes the current beckon backend.
 
